# 2024_idbot_beta

./: RAG_qa.xlsx  README.md  [PROMPT_V2]RAG 기반 법정감염병 안내 AI 챗봇 서비스 (IDBOT).md  dockerfile  edit_complete.md  eval_results_partial.csv  evaluate.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
app/: main.py  tempCodeRunnerFile.py
app/static/: popup.html  script.js
app/templates/: index.html
static/: index.html  script.js
